# osdev

./: .gitignore  CMakeLists.txt  Makefile  aarch64_toolchain.cmake  kernel.ld  kernel_lo.ld  qemu_6.2.0.diff
boards/: CMakeLists.txt
boards/qemu-raspi3b/: kernel.ld
boards/qemu-virt/: CMakeLists.txt  board_conf.c  board_conf.h  board_start.s  board_vmem_bootstrap.c  dts.txt  kernel.ld
boards/raspi3b/: CMakeLists.txt  board_conf.c  board_conf.h  board_start.s  dts.txt  raspi3b.ld
boards/raspi4b/: CMakeLists.txt  board_conf.c  board_conf.h  board_start.s  board_vmem_bootstrap.c  dts.txt  raspi4b.ld
bootstrap/: CMakeLists.txt  main_bootstrap.c  start.s  vmem_bootstrap.c  vmem_bootstrap.h
drivers/: CMakeLists.txt  dummy.c  pl011_uart.c  pl011_uart.h  qemu_fw_cfg.c  qemu_fw_cfg.h
drivers/aarch64/: aarch64.c  aarch64.h
drivers/console/: console_dev.c
drivers/gicv2/: gicv2.c  gicv2.h
drivers/gicv3/: gicv3.c  gicv3.h
drivers/gpio/bcm2711_gpio/: bcm2711_gpio.c  bcm2711_gpio.h
drivers/loop/: loop.c  loop.h
drivers/net/bcm2711_genet/: bcm2711_genet.c  bcm2711_genet.h
drivers/net/edk2_genet/: BcmGenetDxe.h  BcmGenetPlatformDevice.h  GenericPhy.c  GenetUtil.c  edk2defines.h  edk2funcs.c
drivers/net/enc28j60/: enc28j60.c  enc28j60.h
drivers/pcie/: pcie-bcm2711.c  pcie-qemu.c  pcie.c  pcie.h
drivers/spi/: spi.c  spi.h
drivers/spi/bcm2835_spi/: bcm2835_spi.c  bcm2835_spi.h
drivers/timer/: bcm2835_systemtimer.c  bcm2835_systemtimer.h
drivers/usb/xhci/: xhci.c
drivers/virtio_pci_blk/: virtio_pci_blk.c
drivers/virtio_pci_console/: virtio_pci_console.c  virtio_pci_console.h
drivers/virtio_pci_early_console/: virtio_pci_early_console.c  virtio_pci_early_console.h
drivers/virtio_pci_net/: virtio_pci_net.c
include/: k_fs_ioctl_common.h  k_gpio.h  k_ioctl_common.h  k_messages.h  k_modules.h  k_net_api.h  k_select.h  k_spi.h  k_syscall.h  k_sysfs_struct.h
kernel/: .bitutils.h.swp  .kmalloc.c.swp  CMakeLists.txt  assert.h  bitutils.h  board_conf_generic.h  console.c  console.h  drivers.c  drivers.h  dtb.c  dtb.h  elf.c  elf.h  elf_types.h  exception.c  exception.h  exception_asm.s  exception_handler_table.c  exec.c  exec.h  fd.c  fd.h  fs_manager.c  fs_manager.h  gic.c  gic.h  gtimer.c  gtimer.h  high_start.s  kernelspace.c  kernelspace.h  kmalloc.c  kmalloc.h  lock.c  lock.h  main.c  memoryspace.c  memoryspace.h  messages.c  (+26 more)
kernel/fs/: ext2.c  ext2_helpers.c  ext2_helpers.h  file.c  file.h
kernel/fs/ext2/: ext2.c  ext2.h  ext2_helpers.c  ext2_helpers.h  ext2_structures.h
kernel/fs/ramfs/: ramfs.c  ramfs.h
kernel/fs/sysfs/: sysfs.c  sysfs.h  sysfs_profile.c  sysfs_task.c  sysfs_time.c  sysfs_vmalloc.c
kernel/interrupt/: interrupt.c  interrupt.h
kernel/lib/: circbuffer.c  circbuffer.h  elapsedtimer.c  elapsedtimer.h  hashmap.c  hashmap.h  intmap.c  intmap.h  libdtb.c  libdtb.h  libpci.c  libpci.h  libtftp.c  libtftp.h  libvirtio.c  libvirtio.h  llist.c  llist.h  lstruct.c  lstruct.h  utils.c  utils.h  vmalloc.c  vmalloc.h
kernel/lock/: lock.c  lock.h  mutex.c  mutex.h
kernel/net/: arp.c  arp.h  arp_table.c  ethernet.c  ethernet.h  ipv4.c  ipv4.h  ipv4_icmp.c  ipv4_icmp.h  ipv4_route.c  ipv4_route.h  net.c  net.h  net_api.c  net_api.h  nic_ops.h  tcp.c  tcp.h  tcp_bind.c  tcp_bind.h  tcp_conn.c  tcp_conn.h  tcp_socket.c  tcp_socket.h  udp.c  udp.h  udp_socket.c  udp_socket.h
multiboot/: .CMakeLists.txt.swo  .serial.c.swp  .serial.h.swp  CMakeLists.txt  multiboot.c  multiboot.ld  multiboot.s  serial.h  start.s
stdlib/: CMakeLists.txt  bitalloc.c  bitalloc.h  bitutils.c  bitutils.h  errno.c  linalloc.c  linalloc.h  malloc.c  malloc.h  printf.c  printf.h  snprintf.c  string.c  string.h
stdlib/minimal/include/zephyr/: toolchain.h
stdlib/minimal/include/zephyr/sys/: errno_private.h  libc-hooks.h
stdlib/minimal/source/string/: string.c
system/: CMakeLists.txt  Makefile  system.ld  system_assert.h  system_console.c  system_console.h  system_entry.s  system_lib.c  system_lib.h  system_malloc.c  system_msg.c  system_msg.h
system/addline/: addline.c
system/cat/: cat.c
system/count/: count.c
system/dtb/: system_dtb.c
system/echo/: echo.c
system/ext2/: system_ext2.c  system_ext2.h  system_ext2_asm.s
system/gsh/: gsh.c
system/hello_rust/: Cargo.toml
system/hello_rust/src/: lib.rs
system/http_server/: http_server.c
system/lib/: CMakeLists.txt  libdtb.c  libdtb.h  libpci.c  libpci.h  libvirtio.c  libvirtio.h  string_utils.c  string_utils.h  system_assert.h  system_console.c  system_console.h  system_dtb.h  system_entry.s  system_file.c  system_file.h  system_lib.c  system_lib.h  system_malloc.c  system_malloc.h  system_msg.c  system_msg.h  system_socket.c  system_socket.h
system/pcie/: pcie.c
system/rust_syslib/: CMakeLists.txt  Cargo.toml  build.rs
system/rust_syslib/src/: lib.rs
system/tcp_cat/: tcp_cat.c
system/tcp_listen/: tcp_listen.c
system/tcp_test/: tcp_test.c
system/time/: time.c
system/touch/: touch.c
system/udp_recv/: udp_recv.c
system/udp_test/: udp_test.c
system/vfs/: system_vfs.c
system/virtio_mmio/: system_virtio_mmio.c
system/virtio_pci_blk/: virtio_pci_blk.c
system/wait_task/: wait_task.c
tests/: CMakeLists.txt  lstruct_test.c
tools/: disassemble_stack.sh  gdb_pt_walk.py  gdb_tbl_walk.py  network_test.py
